detecting user location enabled

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="dialogue_hint_add_a_city">Add a city</string>
     <string name="dialogue_btn_gps">GPS</string>
     <string name="btn_save">Save</string>
+    <string name="dialogue_turn_on_gps">TURN ON GPS</string>
 
     <plurals name="numberOfCountriesRemain">
         <item quantity="one">%d country remains to visit</item>
