--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="yes">YES</string>
 
     <string name="flag" translatable="false">flag</string>
-    <string name="country" translatable="false">Country</string>
+    <string name="visitedCountry" translatable="false">Country</string>
     <string name="ic_item_arrow">arrow</string>
     <string name="dialogue_hint_add_a_city">Add a city</string>
     <string name="dialogue_btn_gps">GPS</string>
@@ -15,13 +15,13 @@
     <string name="dialog_turn_no_internet">TURN ON INTERNET</string>
 
     <plurals name="numberOfCountriesRemain">
-        <item quantity="one">%d country remains to visit</item>
-        <item quantity="few">%d countries remain to visit</item>
-        <item quantity="other">%d countries remain to visit</item>
+        <item quantity="one">%d visitedCountry remains to visit</item>
+        <item quantity="few">%d visitedCountries remain to visit</item>
+        <item quantity="other">%d visitedCountries remain to visit</item>
     </plurals>
     <plurals name="numberOfCountriesVisited">
-        <item quantity="one">You\'ve been to %d country</item>
-        <item quantity="few">You\'ve been to %d countries</item>
-        <item quantity="other">You\'ve been to %d countries</item>
+        <item quantity="one">You\'ve been to %d visitedCountry</item>
+        <item quantity="few">You\'ve been to %d visitedCountries</item>
+        <item quantity="other">You\'ve been to %d visitedCountries</item>
     </plurals>
 </resources>
