--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Travelling</string>
-    <string name="delete_country">Delete %1$s ?</string>
+    <string name="delete_it">Delete %1$s ?</string>
     <string name="deleted">%1$s deleted</string>
     <string name="yes">YES</string>
 
