--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="search_country">country</string>
     <string name="all_countries_no_results">no results</string>
     <string name="tap_back_button_in_order_to_exit">Click again to exit.</string>
+    <string name="image">image</string>
 
     <plurals name="numberOfCountriesRemain">
         <item quantity="one">%d country remains to visit</item>
