--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -45,4 +45,15 @@
     <string name="facebook_app_id">2312394202364807</string>
     <string name="share_title">Share How Many Countries You Have Visited</string>
     <string name="home_dialog_btn_cancel">Cancel</string>
+    <string name="txt_info_home">• By clicking on \"+\" you can add a country.\n• By clicking
+        on a country you can add a city.\n• By clicking on the pie chart you can change the view
+        of it.\n• By long press, on the pie chart, you can share it on Facebook or another way.
+        \n• By clicking on a flag you will be transferred to the screen where you can see the flag
+        in full screen or replace it with a photo.\n• By clicking on the city you will be redirected
+        to the map showing the geographical location of it.
+    </string>
+    <string name="txt_info_flags">• By long press, on the flag, you can replace it with a photo.
+        \n• By clicking on a photo you will change it back to flag and vise versa.\n• By swiping
+        left or right you can see flags or photos from countries you have visited.
+    </string>
 </resources>
