--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -61,11 +61,24 @@
     <string name="txt_info_all_countries">• If you press on a country, you will be able to see
         the geographical location of it
     </string>
-    <string name="toast.no_facebook_app">You do not have Facebook app installed</string>
-    <string name="toast.no_app_installed">No app available to share pie chart</string>
+
+    <string name="txt_info_billing">Please care to buy the full version of an app,
+        in order to sync your data with server.</string>
+
     <string name="flag_chooser_title_complete_using">Complete action using</string>
     <string name="flag_message_did_not_choose">did not choose anything</string>
     <string name="home_city_date">Date</string>
     <string name="home_city_did_not_save">did not save anything</string>
+
+    <!-- toast messages -->
+    <string name="toast.no_facebook_app">You do not have Facebook app installed</string>
+    <string name="toast.no_app_installed">No app available to share pie chart</string>
+    <string name="toast_internet_connection_lost">Тhe app is offline.</string>
+    <string name="toast_error_due_to_canceling_purchase">Cancelling the purchase</string>
+    <string name="toast_error_unexpected">unexpected error occurred</string>
+    <string name="toast_complete_purchase">You\'ve started the pending purchase. Care to complete it.</string>
+    <string name="toast_purchase_acknowledged">Purchase acknowledged</string>
+
+    <string name="dialog_btn_ok">OK</string>
 
 </resources>
