show pro version if agree to buy

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -50,8 +50,8 @@
     <string name="dialog_hold_on">Hold on a moment, trying to find your location.</string>
     <string name="dialog.no_internet">TURN ON INTERNET</string>
     <string name="home_dialog_btn_cancel">Cancel</string>
-    <string name="txt_info_billing">Please care to buy the full version of an app,
-        in order to sync your data with server.</string>
+    <string name="txt_info_billing"> Unfortunately, this app cannot synchronize your data with a server,
+        since it free.\n\nPlease care to buy the pro version of an app, where your data will be automatically backed up with a server.</string>
     <string name="share_title">Share How Many Countries You Have Visited</string>
     <string name="txt_info_home">• Click on \"+\" to add a country.\n• Click on a country to add a
         city and a month.\n• Click on the pie chart to change the view of it.\n• If you press on the pie chart,
