--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,5 +1,11 @@
 <resources>
-    <!-- not translatable -->
+    <!-- START of not translatable -->
+    <string name="play_market_app_link_to_pro_version" translatable="false">market://details?id=io.github.turskyi.travellingpro</string>
+    <string name="play_market_web_link_to_pro_version" translatable="false">https://play.google.com/store/apps/details?id=io.github.turskyi.travellingpro</string>
+    <string name="share_massage" translatable="false">#travelling_the_world \n https://play.google.com/store/apps/details?id=%1$s</string>
+    <string name="picture_file_name" translatable="false">piechart_%1$s.jpg</string>
+    <string name="picture_name" translatable="false">piechart_%1$s</string>
+    <string name="authority_name" translatable="false">%1$s.provider</string>
     <string name="html_data_flag" translatable="false"><![CDATA[
     <html>
     <head>
@@ -14,7 +20,8 @@
     <string name="privacy_web_page" translatable="false">https://travelling-the-countries.web.app</string>
     <string name="android_5_1" translatable="false">5.1</string>
     <string name="media_providers" translatable="false">com.android.providers.media</string>
-    <string name="image_type" translatable="false">image/jpeg</string>
+    <string name="image_and_jpeg_type" translatable="false">image/jpeg</string>
+    <string name="image_type" translatable="false">image/*</string>
     <string name="geo_location" translatable="false">geo:0,0?q=%1$s</string>
     <!-- for face book sharing -->
     <string name="facebook_app_id" translatable="false">285452062466394</string>
@@ -23,7 +30,7 @@
     <string name="facebook_application_id" translatable="false">285452062466394</string>
     <string name="facebook_login_protocol_scheme" translatable="false">fb285452062466394</string>
     <string name="fb_login_protocol_scheme" translatable="false">fb285452062466394</string>
-    <!-- end of not translatable strings -->
+    <!-- END of not translatable strings -->
 
     <!-- default  strings -->
     <string name="app_name">Travelling</string>
@@ -50,8 +57,11 @@
     <string name="dialog_hold_on">Hold on a moment, trying to find your location.</string>
     <string name="dialog.no_internet">TURN ON INTERNET</string>
     <string name="home_dialog_btn_cancel">Cancel</string>
-    <string name="txt_info_billing"> Unfortunately, this app cannot synchronize your data with a server,
-        since it free.\n\nPlease care to buy the pro version of an app, where your data will be automatically backed up with a server.</string>
+    <string name="txt_info_billing">Unfortunately, this app cannot synchronize your data with a server,
+        since it free.\n\nPlease care to buy the pro version of an app,
+        where your data will be automatically backed up with a server.\n\nYeah, one more thing,
+        after that you have to add all your visited countries to the new app manually,
+        but it totally worth it, since you will never lose them again.</string>
     <string name="share_title">Share How Many Countries You Have Visited</string>
     <string name="txt_info_home">• Click on \"+\" to add a country.\n• Click on a country to add a
         city and a month.\n• Click on the pie chart to change the view of it.\n• If you press on the pie chart,
