--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- START of not translatable -->
     <string name="play_market_app_link_to_pro_version" translatable="false">market://details?id=io.github.turskyi.travellingpro</string>
     <string name="play_market_web_link_to_pro_version" translatable="false">https://play.google.com/store/apps/details?id=io.github.turskyi.travellingpro</string>
@@ -35,7 +35,7 @@
     <string name="tag.sync_dialog" translatable="false">sync dialog</string>
     <!-- not translatable -->
     <string name="scheme_mailto" translatable="false">mailto:</string>
-    <string name="email" translatable="false">dmitriy.turskiy@gmail.com</string>
+    <string name="email" translatable="false" tools:keep="@string/email">dmitriy.turskiy@gmail.com</string>
     <!-- END of not translatable strings -->
 
     <!-- default  strings -->
@@ -128,9 +128,9 @@
     <!-- end of strings for toasts messages -->
     <string name="default_notification_channel_id">Notifications from Travelling application.</string>
     <!-- alert dialog content -->
-    <string name="alert_error_title">It is just an error.</string>
-    <string name="alert_error_message">Do you want to write to the developer?</string>
-    <string name="error_message_intro">Something terrible happened</string>
-    <string name="no">Not really</string>
-    <string name="error_message_try_tomorrow">Then try tomorrow ;)</string>
+    <string name="alert_error_title" tools:keep="@string/alert_error_title">It is just an error.</string>
+    <string name="alert_error_message" tools:keep="@string/alert_error_message">Do you want to write to the developer?</string>
+    <string name="error_message_intro" tools:keep="@string/error_message_intro">Something terrible happened</string>
+    <string name="no" tools:keep="@string/no">Not really</string>
+    <string name="error_message_try_tomorrow" tools:keep="@string/error_message_try_tomorrow">Then try tomorrow ;)</string>
 </resources>
