--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="app_name">Travelling</string>
     <string name="content_description.flag">flag</string>
     <string name="content_description.item_arrow">arrow</string>
-    <string name="content_description.icon_search">search image</string>
+    <string name="content_description.icon_search" tools:keep="@string/content_description_icon_search">search image</string>
     <string name="tap_back_button_in_order_to_exit">Click again to exit.</string>
     <string name="content_description.image">image</string>
     <string name="dialog_btn_ok">OK</string>
@@ -95,7 +95,7 @@
     <!-- end of strings for home screen -->
 
     <!-- screen with all countries -->
-    <string name="hint.search_country">country</string>
+    <string name="hint.search_country" tools:ignore="UnusedResources">country</string>
     <string name="all_countries_no_results">no results</string>
     <string name="txt_info_all_countries">• If you press on a country, you will be able to see
         the geographical location of it
