Refactor AddCityDialogFragment.kt

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -133,4 +133,5 @@
     <string name="error_message_intro" tools:keep="@string/error_message_intro">Something terrible happened</string>
     <string name="no" tools:keep="@string/no">Not really</string>
     <string name="error_message_try_tomorrow" tools:keep="@string/error_message_try_tomorrow">Then try tomorrow ;)</string>
+    <string name="dialog_hold_on">Hold on a moment, trying to find your location.</string>
 </resources>
